Update Swagger + Create Chat API
