# routes.js
@@ -1,9 +1,10 @@
 import UserController from './src/controller/UserController'
 import RoomController from './src/controller/RoomController'
+import ChatController from './src/controller/ChatController'
 
 module.exports = (app) => {
-  app.route('/')
-    .get((req, res) => res.send('Hello World'))
+  // app.route('/')
+  //   .get((req, res) => res.send('Hello World'))
   
   app.route('/auth/login')
     .post(UserController.loginWithFirebaseToken)
@@ -11,6 +12,10 @@ module.exports = (app) => {
   app.route('/api/users')
     .get(UserController.getUserAvailable)
 
-  app.route('/api/room')
-    .post(RoomController.createRoom)
+  app.route('/api/chatRoom')
+    .post(RoomController.openRoomForSingleChat)
+
+  app.route('/api/chats')
+    .get(ChatController.getChatsByRoomId)
+    .post(ChatController.createChatForUserInRoom)
 }
